Regression: Outliner Unlink material crash Blender 3.2 #98753

Closed
opened 2022-06-10 05:33:01 +02:00 by Zhen Dai · 9 comments

System Information
Operating system: Windows-10-10.0.18363-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.68

Blender Version
Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: e05e1e3691
Worked: 3.1.2

Caused by ba49345705

Short description of error

Unlinking a material under materials list crash Blender, it should do nothing instead.

Exact steps for others to reproduce the error

  • Switch Outliner to "Blender File" display mode

  • Expand the Materials list

  • Try to unlink a Material

  • Blender 3.2 crash consistently across Windows and macOS

  • Under Blender 3.1.2 it simply does nothing (to be expected I think, as there is no data-block to remove)

  • This feels like a regression, unless Blender is planning to allow unlinking a material from all objects this way.

  • Note: unlink a material under a Mesh doesn't crash and it unlinks the data-block as expected, so make sure you unlink under Materials list.

unlink-crash.blend

**System Information** Operating system: Windows-10-10.0.18363-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.68 **Blender Version** Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: `e05e1e3691` Worked: 3.1.2 Caused by ba49345705 **Short description of error** Unlinking a material under materials list crash Blender, it should do nothing instead. **Exact steps for others to reproduce the error** - Switch Outliner to "Blender File" display mode - Expand the Materials list - Try to unlink a Material - Blender 3.2 crash consistently across Windows and macOS - Under Blender 3.1.2 it simply does nothing (to be expected I think, as there is no data-block to remove) - This feels like a regression, unless Blender is planning to allow unlinking a material from all objects this way. - Note: unlink a material under a Mesh doesn't crash and it unlinks the data-block as expected, so make sure you unlink under Materials list. [unlink-crash.blend](https://archive.blender.org/developer/F13142706/unlink-crash.blend)
Author

Added subscriber: @Zhen-Dai

Added subscriber: @Zhen-Dai
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for the report. I can confirm the crash.

Will bisect

Thanks for the report. I can confirm the crash. Will bisect
Member

Added subscribers: @JulianEisel, @lichtwerk

Added subscribers: @JulianEisel, @lichtwerk
Member

Caused by ba49345705

CC @JulianEisel

Caused by ba49345705 CC @JulianEisel
Philipp Oeser changed title from Unlink material crash Blender 3.2 to Regression: Outliner Unlink material crash Blender 3.2 2022-06-10 09:33:00 +02:00

This issue was referenced by ff1f5236ac

This issue was referenced by ff1f5236ac7218c9f8cbebf8492885a0544d9b6a

This issue was referenced by e772087ed6

This issue was referenced by e772087ed664ffcc230850837558415cc9015f71
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Julian Eisel self-assigned this 2022-06-14 16:22:38 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98753
No description provided.